--- a/css/styles.css
+++ b/css/styles.css
@@ -14,6 +14,21 @@
     width: 15px;
     background-color: yellow;
     display: inline;
+    padding: 5px;
+    margin: 5px;
+}
+
+.display-inline-block {
+    height: 20px;
+    width: 60px;
+    display: inline-block;
+    background-color: yellow;
+    padding: 5px;
+    margin: 5px;
+}
+
+.display-block {
+    display: block;
+    background-color: yellow;
     padding: 10px;
-    margin: 10px;
 }
